<resources>
	<string name="app_name" translatable="false">Mealient</string>
	<string name="fragment_authentication_input_hint_email">Email or username</string>
	<string name="fragment_authentication_input_hint_password">Password</string>
	<string name="fragment_authentication_input_hint_url">Server URL</string>
	<string name="fragment_authentication_button_login">Login</string>
	<string name="content_description_view_holder_recipe_image">Picture of the cooked meal</string>
	<string name="menu_navigation_drawer_logout">Logout</string>
	<string name="view_holder_recipe_text_placeholder">Loading…</string>
	<string name="content_description_fragment_recipe_info_image" translatable="false">@string/content_description_view_holder_recipe_image</string>
	<string name="fragment_recipe_info_ingredients_header">Ingredients</string>
	<string name="fragment_recipe_info_instructions_header">Instructions</string>
	<string name="fragment_disclaimer_main_text">This project is developed independently from the core Mealie project. It is NOT associated with the core Mealie developers. Any issues must be reported to the Mealient repository, NOT the Mealie repository.</string>
	<string name="fragment_baseurl_url_input_empty">URL can\'t be empty</string>
	<string name="fragment_base_url_no_connection">Can\'t connect, check address.</string>
	<string name="fragment_base_url_unexpected_response">Unexpected response. Is it Mealie?</string>
	<string name="fragment_base_url_malformed_url">Check URL format: %s</string>
	<string name="fragment_base_url_save">Proceed</string>
	<string name="fragment_base_url_unknown_error" translatable="false">@string/fragment_authentication_unknown_error</string>
	<string name="fragment_base_url_invalid_certificate_title">The identity of the server could not be verified</string>
	<string name="fragment_base_url_invalid_certificate_message">Do you trust this certificate?\n\nCertificate Information:\nIssuer: %1$s\nSubject: %2$s\nValid From: %3$s\nValid Until: %4$s</string>
	<string name="fragment_base_url_invalid_certificate_accept">Trust</string>
	<string name="fragment_base_url_invalid_certificate_deny">No</string>
	<string name="menu_navigation_drawer_login">Login</string>
	<string name="fragment_disclaimer_button_okay">Okay</string>
	<string name="view_holder_recipe_instructions_step">Step: %d</string>
	<string name="fragment_authentication_email_input_empty">E-mail can\'t be empty</string>
	<string name="fragment_authentication_password_input_empty">Password can\'t be empty</string>
	<string name="fragment_authentication_credentials_incorrect">E-mail or password is incorrect.</string>
	<string name="fragment_authentication_unknown_error">Something went wrong, please try again.</string>
	<string name="fragment_add_recipe_recipe_name">Recipe name</string>
	<string name="fragment_add_recipe_recipe_description">Description</string>
	<string name="menu_navigation_drawer_add_recipe">Add recipe</string>
	<string name="menu_navigation_drawer_recipes_list">Recipes</string>
	<string name="fragment_add_recipe_recipe_yield">Recipe yield</string>
	<string name="fragment_add_recipe_save_button">Save recipe</string>
	<string name="fragment_add_recipe_new_instruction">New step</string>
	<string name="fragment_add_recipe_new_ingredient">New ingredient</string>
	<string name="fragment_add_recipe_public_recipe">Public recipe</string>
	<string name="fragment_add_recipe_disable_comments">Disable comments</string>
	<string name="fragment_add_recipe_ingredient_hint">Ingredient</string>
	<string name="fragment_add_recipe_instruction_hint">Step description</string>
	<string name="fragment_add_recipe_name_error">Recipe name can\'t be empty</string>
	<string name="fragment_add_recipe_save_error">Something went wrong</string>
	<string name="fragment_add_recipe_save_success">Saved recipe successfully</string>
	<string name="fragment_add_recipe_clear_button">Clear</string>
	<string name="fragment_base_url_url_input_helper_text">Example: demo.mealie.io</string>
	<string name="fragment_authentication_email_input_helper_text">Example: changeme@example.com</string>
	<string name="fragment_authentication_password_input_helper_text">Example: demo</string>
	<string name="fragment_recipes_last_page_loaded_toast">Last page loaded</string>
	<string name="fragment_recipes_load_failure_toast" comment="EXAMPLE: Load error: unauthorized.">Load error: %1$s.</string>
	<string name="fragment_recipes_load_failure_toast_no_reason">Load failed.</string>
	<string name="fragment_recipes_load_failure_toast_unauthorized">unauthorized</string>
	<string name="fragment_recipes_load_failure_toast_unexpected_response">unexpected response</string>
	<string name="fragment_recipes_load_failure_toast_no_connection">no connection</string>
	<string name="fragment_recipes_favorite_update_failed">Favorite status update failed</string>
	<string name="fragment_recipes_delete_recipe_failed">Recipe removal failed</string>
	<string name="fragment_recipes_delete_recipe_confirm_dialog_title">Delete recipe</string>
	<string name="fragment_recipes_delete_recipe_confirm_dialog_message">Are you sure you want to delete %1$s? This cannot be undone.</string>
	<string name="fragment_recipes_delete_recipe_confirm_dialog_positive_btn">Confirm</string>
	<string name="fragment_recipes_delete_recipe_confirm_dialog_negative_btn">Cancel</string>
	<string name="menu_navigation_drawer_change_url">Change URL</string>
	<string name="search_recipes_hint">Search recipes</string>
	<string name="menu_navigation_drawer_header" translatable="false">@string/app_name</string>
	<string name="view_toolbar_navigation_icon_content_description">Open navigation drawer</string>
	<string name="fragment_recipes_list_no_recipes">No recipes</string>
	<string name="activity_share_recipe_success_toast">Recipe saved successfully.</string>
	<string name="activity_share_recipe_failure_toast">Something went wrong.</string>
	<string name="content_description_activity_share_recipe_progress">Progress indicator</string>
	<string name="view_holder_recipe_favorite_content_description">Item is favorite</string>
	<string name="view_holder_recipe_non_favorite_content_description">Item is not favorite</string>
	<string name="view_holder_recipe_delete_content_description">Delete recipe</string>
	<string name="fragment_recipes_favorite_added">Added %1$s to favorites</string>
	<string name="fragment_recipes_favorite_removed">Removed %1$s from favorites</string>
	<string name="menu_navigation_drawer_shopping_lists">Shopping lists</string>
	<string name="menu_navigation_drawer_email_logs">Email logs</string>
	<string name="activity_main_email_logs_subject">Mealient logs</string>
	<string name="activity_main_email_logs_confirmation_message">The logs contain sensitive data such as API token, shopping lists, and recipes. API tokens can be revoked using web client. The file can be viewed and edited if you send it to yourself instead.</string>
	<string name="activity_main_email_logs_confirmation_title">Sending sensitive data</string>
	<string name="activity_main_email_logs_confirmation_positive">Choose how to send</string>
	<string name="activity_main_email_logs_confirmation_negative">Cancel</string>
	<string name="activity_main_logout_confirmation_title">Logging out</string>
	<string name="activity_main_logout_confirmation_message">Are you sure you want to log yourself out?</string>
	<string name="activity_main_logout_confirmation_positive">Log out</string>
	<string name="activity_main_logout_confirmation_negative">Cancel</string>
</resources>