<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.baseurl.BaseURLFragment">

	<com.google.android.material.progressindicator.LinearProgressIndicator
		android:id="@+id/progress"
		style="@style/IndeterminateProgress"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:visibility="visible" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/url_input_layout"
		style="@style/SmallMarginTextInputLayoutStyle"
		android:hint="@string/fragment_authentication_input_hint_url"
		app:helperText="@string/fragment_base_url_url_input_helper_text"
		app:helperTextEnabled="true"
		app:layout_constraintBottom_toTopOf="@+id/button"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.2"
		app:layout_constraintVertical_chainStyle="packed">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/url_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textUri" />
	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/button"
		style="@style/SmallMarginButton"
		android:text="@string/fragment_base_url_save"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/url_input_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>