<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.auth.AuthenticationFragment">

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/email_input_layout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin_small"
		android:layout_marginTop="@dimen/margin_small"
		android:layout_marginEnd="@dimen/margin_small"
		android:layout_marginBottom="@dimen/margin_small"
		android:hint="@string/fragment_authentication_input_hint_email"
		app:layout_constraintBottom_toTopOf="@+id/password_input_layout"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.1"
		app:layout_constraintVertical_chainStyle="packed">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/email_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textEmailAddress" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/password_input_layout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin_small"
		android:layout_marginTop="@dimen/margin_small"
		android:layout_marginEnd="@dimen/margin_small"
		android:layout_marginBottom="@dimen/margin_small"
		android:hint="@string/fragment_authentication_input_hint_password"
		app:layout_constraintBottom_toTopOf="@+id/url_input_layout"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/email_input_layout">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/password_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/url_input_layout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin_small"
		android:layout_marginTop="@dimen/margin_small"
		android:layout_marginEnd="@dimen/margin_small"
		android:layout_marginBottom="@dimen/margin_small"
		android:hint="@string/fragment_authnetication_input_hint_url"
		app:layout_constraintBottom_toTopOf="@+id/button"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/password_input_layout">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/url_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textUri" />
	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin_small"
		android:layout_marginTop="@dimen/margin_small"
		android:layout_marginEnd="@dimen/margin_small"
		android:layout_marginBottom="@dimen/margin_small"
		android:text="@string/fragment_authentication_button_login"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/url_input_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>